# vital

./: .gitignore  BUILD_INSTRUCTIONS.md  BUILD_READY.md  CMakeLists.txt  GITHUB_PUSH_GUIDE.md  LICENSE  README.md  build.sh  build_windows.bat  push_to_github.bat  push_to_github.sh  verify_build.bat
cmake/: CompilerConfig.cmake  DependencyConfig.cmake  InstallConfig.cmake  JUCEConfig.cmake  PackageConfig.cmake  PerformanceConfig.cmake  PlatformConfig.cmake  StaticAnalysisConfig.cmake  VitalConfig.cmake
project_structure/: .gitignore  CMakeLists.txt  PROJECT_STRUCTURE.md  README.md  project_config.json
project_structure/include/vital/: vital.h
project_structure/include/vital/config/: settings.h
project_structure/include/vital/core/: application.h  plugin_interface.h  version.h
project_structure/include/vital/dsp/: envelope.h  filter.h  lfo.h  oscillator.h
project_structure/include/vital/effects/: reverb.h
project_structure/include/vital/math/: math_utils.h
project_structure/include/vital/midi/: midi_input.h
project_structure/include/vital/synth/: synthesizer.h  voice.h  voice_manager.h
project_structure/include/vital/ui/: main_window.h
project_structure/include/vital/ui/components/: knob.h
project_structure/resources/presets/: warm_analog_lead.vital
project_structure/scripts/: build.sh
project_structure/src/: main.cpp
project_structure/src/core/: application.cpp
project_structure/src/dsp/: oscillator.cpp
project_structure/src/math/: math_utils.cpp
src/ai/: CMakeLists.txt  README.md  adaptive_modulation_system.cpp  adaptive_modulation_system.h  ai_manager.cpp  ai_manager.h  intelligent_audio_analyzer.cpp  intelligent_audio_analyzer.h  intelligent_preset_generator.cpp  intelligent_preset_generator.h  machine_learning_engine.cpp  machine_learning_engine.h  neural_preset_generator.cpp  neural_preset_generator.h  style_transfer_engine.cpp  style_transfer_engine.h
src/ai/docs/: API_REFERENCE.md
src/ai/examples/: ai_integration_demo.cpp
src/application/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  main.cpp  plugin_format_handler.cpp  plugin_format_handler.h  vital_application.cpp  vital_application.h  vital_main_window.cpp  vital_main_window.h  vital_plugin_editor.cpp  vital_plugin_editor.h  vital_plugin_processor.cpp  vital_plugin_processor.h
src/audio_engine/: vital_audio_engine.cpp  vital_audio_engine.h
src/audio_engine/audio_quality/: audio_quality_processor.h
src/audio_engine/core/: audio_engine_core.cpp  audio_engine_core.h
src/audio_engine/effects/: effects_processing_engine.h
src/audio_engine/filtering/: filter_engine.h
src/audio_engine/modulation/: modulation_engine.h
src/audio_engine/oscillators/: new_oscillators.h
src/audio_engine/spectral/: spectral_warping_engine.h
src/audio_engine/synthesis/: advanced_synthesis_engine.h
src/audio_engine/utility/: parameter_system.h  vital_constants.h
src/performance/: CMakeLists.txt  README.md  branchless_programming.h  cache_optimization.h  example_usage.cpp  multithreading.h  performance.h  real_time_optimization.h  simd_vectorization.h
src/plugin/: CMakeLists.txt  README.md  au_wrapper.h  plugin_midi.h  plugin_parameters.cpp  plugin_parameters.h  plugin_state.h  plugin_ui.h  vital_plugin.cpp  vital_plugin.h  vst3_wrapper.h
src/ui/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  example_modern_ui.cpp  vital_modern_ui.h
src/ui/accessibility/: accessibility_manager.cpp  accessibility_manager.h  focus_manager.h  screen_reader_interface.h  text_to_speech_engine.h
src/ui/core/: animation_engine.h  component.cpp  component.h  layout_manager.h  ui_manager.h
src/ui/material/: button.cpp  button.h  card.cpp  card.h  drawer.h  knob.cpp  knob.h  slider.cpp  slider.h  tabbar.h  toggle.h
src/ui/responsive/: responsive_layout.h
src/ui/theme/: theme_manager.cpp  theme_manager.h
src/ui/visualizations/: level_meter.h  modulation_visualizer.h  oscilloscope.cpp  oscilloscope.h  parameter_visualizer.h  patch_cable_system.h  spectrogram.cpp  spectrogram.h  spectrum_analyzer.cpp  spectrum_analyzer.h  waveform_viewer.cpp  waveform_viewer.h
src/ui/widgets/: main_window.h
src/voice_control/: CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  README.md  VitalVoiceControlConfig.cmake.in  multi_language_support.cpp  natural_language_controller.cpp  vital_voice_control.h  vital_voice_control_system.cpp  voice_command_recognizer.cpp  voice_preset_navigator.cpp  voice_tutorial_system.cpp
src/voice_control/examples/: basic_voice_control.cpp  multilang_demo.cpp  tutorial_system_demo.cpp
